--- a/index.html
+++ b/index.html
@@ -1,28 +1,70 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Escoge tu paleta de colores!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ThreeSixty Bootstrap Template">
-    <meta name="author" content="Fabian Bentz Webdesign">
-
-    
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,500,400italic,700' rel='stylesheet' type='text/css'>
-    
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
-
-  </head>
-
-<body>
-
-<!-- Escribe tu código HTML aquí -->
-
-<!-- BOOTSTRAP JAVASCRIPT -->
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Escoge tu paleta de colores!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="ThreeSixty Bootstrap Template">
+        <meta name="author" content="Fabian Bentz Webdesign">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,500,400italic,700' rel='stylesheet' type='text/css'>
+        <link href="./css/bootstrap.css" rel="stylesheet">
+        <link href="./css/main.css" rel="stylesheet">
+        <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
+    </head>
+    <body>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#colapsar">
+                            <span class="sr-only"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo_kane"></a> <!-- /.logo kane -->
+                    </div>
+                    <div class="collapse navbar-collapse" id="colapsar">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Service</a>
+                            </li>
+                            <li>
+                                <a href="#">Team</a>
+                            </li>
+                            <li>
+                                <a>Price</a>
+                            </li>
+                            <li>
+                                <a href="#">Clients</a>
+                            </li>
+                            <li>
+                                <a href="#">Facts</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>                                
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container -->
+            </nav>
+            <header id="img-back-1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="intro-text">
+                                <h1 clas="text-header">BEATIFUL COLOR PALETTES FOR YOUR NEXT WEB PROJECT</h1>
+                                <h2 clas="text-header">Chossing the right color scheme is essential to your website's success. Your layout and other desing choices - incluiding font - should be develoved in concert with your color scheme to ensure readability, cohesiveness and beauty in the final product.</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </div>
+        <!-- BOOTSTRAP JAVASCRIPT -->
+        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    </body>
 </html>
