creacion de dos secciones

--- a/index.html
+++ b/index.html
@@ -62,7 +62,140 @@
                     </div>
                 </div>
             </header>
-        </div>
+            <div class="content-wrapper"> 
+                <section class="primary">
+                    <div class="container"><!-- /.color de paletas-->
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h2 class="text-center">PICK YOUR COLOR PALETTE</h2>
+                                <hr class="hr1 hrcolor1">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center"> <!-- /. id color paletas-->
+                                <div class="div-paleta-colores" id="uno">#69D2E7</div>
+                                <div class="div-paleta-colores" id="dos">#A7DBDB</div>
+                                <div class="div-paleta-colores" id="tres">#E0E4CC</div>
+                                <div class="div-paleta-colores" id="cuatro">#F38630</div>
+                                <div class="div-paleta-colores" id="cinco">#FA6900</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <div class="div-paleta-colores" id="seis">#E94E6F</div>
+                                <div class="div-paleta-colores" id="siete">#542433</div>
+                                <div class="div-paleta-colores" id="ocho">#5A6A62</div>
+                                <div class="div-paleta-colores" id="nueve">#C6D5CD</div>
+                                <div class="div-paleta-colores" id="diez">#FDF200</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <div class="div-paleta-colores" id="once">#DB3340</div>
+                                <div class="div-paleta-colores" id="doce">#E8B711</div>
+                                <div class="div-paleta-colores" id="trece">#F7EAC8</div>
+                                <div class="div-paleta-colores" id="catorce">#1FDA9A</div>
+                                <div class="div-paleta-colores" id="quince">#28ABE3</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <div class="div-paleta-colores" id="dieciseis">#588c73</div>
+                                <div class="div-paleta-colores" id="diecisiete">#F2E394</div>
+                                <div class="div-paleta-colores" id="dieciocho">#F2AE72</div>
+                                <div class="div-paleta-colores" id="diecinueve">#D96459</div>
+                                <div class="div-paleta-colores" id="veinte">#8C4646</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <div class="div-paleta-colores" id="veintiuno">#D0C91F</div>
+                                <div class="div-paleta-colores" id="veintidos">#85C4B9</div>
+                                <div class="div-paleta-colores" id="veintitres">#008BBA</div>
+                                <div class="div-paleta-colores" id="veinticuatro">#DF514C</div>
+                                <div class="div-paleta-colores" id="veinticinco">#DC403B</div>
+                            </div>
+                        </div>                                    
+                    </div>
+                </section>
+                <section class="success" id="about"> <!-- /. seccion about us-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>ABOUT US</h2>
+                                <hr class="hrcolor2">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 col-lg-offset-2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque nisl consectur et.</p>
+                                <div class="row"> 
+                                    <div class="col-lg-12"> 
+                                        <div class="progress"> <!-- /. clase progress-warning de bootstrap-->
+                                            <div class="progress-bar progress-bar-warning" id="p-html"></div> <!-- /. id de progress %-->
+                                        </div>
+                                        <p>HTML</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-warning" id="p-css"></div>
+                                        </div>
+                                        <p>CSS</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-warning" id="p-java"></div>
+                                        </div>
+                                        <p>JAVASCRIPT</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-warning" id="p-php"></div>
+                                        </div>
+                                        <p>PHP</p>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-warning" id="p-pi"></div>
+                                        </div> 
+                                        <p>PHOTOSHOP/ILUSTRATOR</p>                           
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-responsive" src="img/agency-img3.jpg" alt="">
+                            </div>
+                        </div>
+                    </div> <!-- /. container-->
+                </section>
+                <section class="primary what"> <!-- /. seccion what we do-->
+                    <div class="container"> <!-- /. container-->
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>WHAT WE DO</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                            </div>
+                        </div>                    
+                        <div class="row text-center">
+                            <div class="col-lg-4">
+                                <img class="img-responsive" src="img/icons/webdesign.png" alt="">
+                                <h2>Web Desing</h2>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-responsive" src="img/icons/graphicdesign.png" alt="">
+                                <h2>Graphic Design</h2>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                            </div>
+                            <div class="col-lg-4">
+                                <img class="img-responsive" src="img/icons/mobile.png" alt="">
+                                <h2>Mobile App</h2>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <button class="btn btn-blk">HIRE US NOW!</button>
+                            </div>
+                        </div>                        
+                    </div> <!-- /. container-->
+                </section>
+            </div>   <!-- /.container-fluid -->            
+        </div><!-- /.container-fluid -->
+       
         <!-- BOOTSTRAP JAVASCRIPT -->
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="./js/bootstrap.min.js"></script>
