--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,500,400italic,700' rel='stylesheet' type='text/css'>
         <link href="./css/bootstrap.css" rel="stylesheet">
         <link href="./css/main.css" rel="stylesheet">
-        <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
+        <link href="./font-awesome/bootstrap.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
@@ -193,6 +193,24 @@
                         </div>                        
                     </div> <!-- /. container-->
                 </section>
+                <section class="primary what"> <!-- /. seccion our awesome team-->
+                    <div class="container"> <!-- /. container-->
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>OUR AWESOME TEAM</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                            </div>
+                        </div>                    
+                        <div class="row text-center">
+                            <div class="col-lg-3">
+                                <img class="img-responsive" src="img/team/1.jpg" alt="">
+                                <p>Jane Doe</p>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros</p>
+                            </div>
+                        </div>                        
+                    </div> <!-- /. container-->
+                </section>                
             </div>   <!-- /.container-fluid -->            
         </div><!-- /.container-fluid -->
        
