agrego redes sociales

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,500,400italic,700' rel='stylesheet' type='text/css'>
         <link href="./css/bootstrap.css" rel="stylesheet">
         <link href="./css/main.css" rel="stylesheet">
-        <link href="./font-awesome/bootstrap.css" rel="stylesheet">
+        <link href="./font-awesome/css/font-awesome.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
@@ -207,7 +207,50 @@
                                 <img class="img-responsive" src="img/team/1.jpg" alt="">
                                 <p>Jane Doe</p>
                                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros</p>
+                                <ul class="list-unstyled social-network"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-pinterest" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>                       
+                                </ul>
                             </div>
+                            <div class="col-lg-3">
+                                <img class="img-responsive" src="img/team/1.jpg" alt="">
+                                <p>Jane Doe</p>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros</p>
+                                <ul class="list-unstyled social-network"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-pinterest" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>                       
+                                </ul>
+                            </div>
+                            <div class="col-lg-3">
+                                <img class="img-responsive" src="img/team/1.jpg" alt="">
+                                <p>Jane Doe</p>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros</p>
+                                <ul class="list-unstyled social-network"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-pinterest" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>                       
+                                </ul>
+                            </div>
+                            <div class="col-lg-3">
+                                <img class="img-responsive" src="img/team/1.jpg" alt="">
+                                <p>Jane Doe</p>
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros</p>
+                                <ul class="list-unstyled social-network"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-pinterest" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-instagram" aria-hidden="true"></i></li>                       
+                                </ul>
+                            </div>                                                                                    
                         </div>                        
                     </div> <!-- /. container-->
                 </section>                
