--- a/index.html
+++ b/index.html
@@ -253,7 +253,158 @@
                             </div>                                                                                    
                         </div>                        
                     </div> <!-- /. container-->
-                </section>                
+                </section>
+                <section class="success" id="about"> <!-- /. BEST PRICE GURANTEED-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>BEST PRICE GURANTEED</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- /. container-->
+                </section>
+                <section class="success" id="about"> <!-- /. BEST PRICE GURANTEED-->
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h2>WHAT OUR CLIENTS SAY</h2>
+                            <hr class="hrcolor2">
+                            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                            <p class="text-cursive">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam autem minima rem sapiente voluptatem doloremque dicta libero vitae dignissimos ducimus! Ab ipsam odio velit id deleniti ut placeat pariatur minima.</p>
+                        </div>
+                    </div>
+                </section>                                             
             </div>   <!-- /.container-fluid -->            
         </div><!-- /.container-fluid -->
        
