--- a/index.html
+++ b/index.html
@@ -252,8 +252,212 @@
                                 </ul>
                             </div>                                                                                    
                         </div>                        
-                    </div> <!-- /. container-->                                            
-            </div>   <!-- /.container-fluid -->            
+                    </div> <!-- /. container-->
+                </section>
+                <section class="success" id="about"> <!-- /. BEST PRICE GURANTEED-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>BEST PRICE GURANTEED</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3"> <!-- /. plantillas price-->
+                                <div class="success border-price">
+                                    <div class="text-center">
+                                    <h3>STARTER</h3>
+                                    </div>
+                                    <div class="text-center price">
+                                        <p>$10 /MO</p>
+                                        <p>1 mont FREE trial</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>2GB Disk Space</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>10 GB Bandwith</p>
+                                    </div>                                    
+                                    <div class="text-center">
+                                        <p>1 Databases</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>Daily Backup</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <p>1 Domains</p>
+                                    </div>
+                                    <div class="text-center div-back-price-1">
+                                        <p>24h Support</p>
+                                    </div>                                                                                                                                                
+                                    <div class="text-center">
+                                        <button class="btn btn-blk-2">Sing Up</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div> <!-- /. container-->
+                </section>
+                <section class="success" id="about"> <!-- /. WHAT OUR CLIENTS SAY-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>WHAT OUR CLIENTS SAY</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+                                <p class="text-cursive"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam autem minima rem sapiente voluptatem doloremque dicta libero vitae dignissimos ducimus! Ab ipsam odio velit id deleniti ut placeat pariatur minima.</em></p>
+                                <p class="text-naranja">- Automotive Company</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <p class="text-cursive"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam autem minima rem sapiente voluptatem doloremque dicta libero vitae dignissimos ducimus! Ab ipsam odio velit id deleniti ut placeat pariatur minima.</em></p>
+                                <p class="text-naranja">- XPedius Aerospace</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <p class="text-cursive"><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam autem minima rem sapiente voluptatem doloremque dicta libero vitae dignissimos ducimus! Ab ipsam odio velit id deleniti ut placeat pariatur minima.</em></p>
+                                <p class="text-naranja">- CKPit Solution</p>
+                            </div>
+                        </div>                                                
+                    </div>
+                </section>
+                <section class="success" id="about"> <!-- /. WHAT OUR CLIENTS SAY-->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <h2>GET IN TOUCH</h2>
+                                <hr class="hrcolor2">
+                                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>              
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12"> <!-- /. formulario WHAT OUR CLIENTS SAY-->    
+                                <form>
+                                    <div class="form-group">
+                                        <input class="form-control" placeholder="Name"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input class="form-control" placeholder="Email*"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <input class="form-control" placeholder="Phone*"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea class="form-control" placeholder="Message*" rows="6"></textarea>
+                                    </div>
+                                    <button class="btn btn-blk-2">Submit</button>
+                                </form>
+                                <p>*Required</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section> <!-- /. redes sociales-->
+                    <div class="container">
+
+                    </div>
+                </section>                                                                           
+            </div>   <!-- /.content-wrapper -->            
         </div><!-- /.container-fluid -->
        
         <!-- BOOTSTRAP JAVASCRIPT -->
