font-awesome para social network

--- a/index.html
+++ b/index.html
@@ -452,9 +452,21 @@
                         </div>
                     </div>
                 </section>
-                <section> <!-- /. redes sociales-->
+                <section id="img-back-2"> <!-- /. redes sociales-->
                     <div class="container">
-
+                        <div class="row">
+                            <div class="col-lg-12 text-center">
+                                <ul class="list-unstyled social-network"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-facebook size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-linkedin size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-pinterest size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-google-plus size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-twitter-square size-redes" aria-hidden="true"></i></li>
+                                    <li><i class="fa fa-instagram size-redes" aria-hidden="true"></i></li>                       
+                                </ul>                                
+                            </div>
+                        </div>
                     </div>
                 </section>                                                                           
             </div>   <!-- /.content-wrapper -->            
