--- a/index.html
+++ b/index.html
@@ -468,7 +468,42 @@
                             </div>
                         </div>
                     </div>
-                </section>                                                                           
+                </section>
+                <footer class="what">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4 text-center">
+                                <h3>Visit Us</h3>
+                                <hr class="hrcolor2">
+                                <ul class="list-unstyled"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-headphones" aria-hidden="true"></i>10 Lorum Ipsum Street</li>
+                                    <li><i class="fa fa-search" aria-hidden="true"></i>68123 Mannheim</li>
+                                    <li><i class="fa fa-flag" aria-hidden="true"></i>Germany</li>                      
+                                </ul>                                                            
+                            </div>
+                            <div class="col-lg-4 text-center">
+                                <h3>Write Us</h3>
+                                <hr class="hrcolor2">
+                                <ul class="list-unstyled"> <!-- /. redes sociales-->
+                                    <li><i class="fa fa-phone" aria-hidden="true"></i>-49 621 123 321 123</li>
+                                    <li><i class="fa fa-mail-forward" aria-hidden="true"></i>info@bianbentz.de</li>
+                                    <li><i class="fa fa-print" aria-hidden="true"></i>+ 49 621 123 321 123</li>                      
+                                </ul>                                                            
+                            </div> 
+                            <div class="col-lg-4 text-center">
+                                <h3>Newsletter</h3>
+                                <hr class="hrcolor2">
+                                <div class="input-group">
+                                    <span class="input-group-addon beautiful">
+                                    <i class="fa fa-mail-reply" aria-hidden="true"></i>
+                                    </span>
+                                    <input type="text" class="form-control" placeholder="Enter email">
+                                </div>
+                                <button class="btn btn-blk-2">Subscribe Now!</button>                                                  
+                            </div>                                                       
+                        </div>
+                    </div>
+                </footer>                                                                           
             </div>   <!-- /.content-wrapper -->            
         </div><!-- /.container-fluid -->
        
