--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             <li class="page-scroll">
                                 <a href="#clients">Clients</a>
                             </li>
-                            <li>
-                                <a href="#">Facts</a>
+                            <li class="page-scroll">
+                                <a href="#Facts">Facts</a>
                             </li>
                             <li class="page-scroll">
                                 <a href="#contact">Contact</a>
